--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     .h1 {
       text-align:center;
     }
-        
+   .p {
+     text-align: center;
+     text-color: blue;
+    }
     
   </style>
 <body>
