--- a/index.html
+++ b/index.html
@@ -1,10 +1,86 @@
 <!DOCTYPE HTML>
 <html>
-<title> My web</title>
+ <title>Personal Portfolio</title>
 <head>
+ <link href='http://fonts.googleapis.com/css?family=Oleo+Script' rel='stylesheet' type='text/css'>
 </head>
-<body>
-<h1> Hi </h1>
-<p> Testing</p>
-</body>
-</html>
+  <style>
+    body{
+  background-color: pink;
+  margin: 10px;
+}
+
+h1 {
+ font: 300 70px/1.3 'Oleo Script',sans-serif;
+  color: #2b2b2b;
+  text-shadow: 4px 4px 0px rgba(0,0,0,0.1);
+  text-align: center;
+}
+
+.wrapper {
+    display: grid;
+    grid-gap: 1px;
+        height: 600px;
+    }
+
+    .box {
+        background-color: #90D7FF;
+        color: #fff;
+        border-radius: 1px;
+        padding: 20px;
+        font-size: 150%;
+      border: 1px solid black;
+}
+
+
+    .a {
+        grid-area: 1 / 2 / 2 / 3;
+    }
+    .b {
+        grid-area: 2 / 2 / 3 / 3;
+    }
+    .c {
+        grid-area: 2 / 3 / 3 / 4;
+    }
+    .d {
+        grid-area: 1 / 1 / 2 / 2;
+    }
+    .e {
+        grid-area: 2 / 1 / 3 / 2;
+    }
+    .f {
+        grid-area: 1 / 3 / 2 / 4;
+    }
+
+.item:hover {
+  background-color: #C9F9FF;
+  color: black;
+  transition: all 0.25s ease;
+}
+
+.item {
+  transition: all 0.25s ease;
+}
+
+@media (min-width: 1020px){
+  .grid {
+    max-width: 100px;
+    display: grid;
+    margin: 100px auto;
+  }
+}
+  </style>
+   <h1> Grace Lee Portfolio/Grid layout</h1>
+  <body>
+    <div class="wrapper">
+  <div class="box a item">A</div>
+  <div class="box b item">B</div>
+  <div class=" box c item">c</div>
+  <div class="box d item">D</div>
+  <div class="box e item">e</div>
+  <div class="box f item">F</div>
+</div>
+    
+  </body>
+  </html>
+    
