--- a/index.html
+++ b/index.html
@@ -26,16 +26,7 @@ p{
         height: 600px;
     }
 
-    .box {
-        background-color: pink;
-        color: #fff;
-        border-radius: 1px;
-        padding: 20px;
-        font-size: 150%;
-      border-bottom: 1px solid black;
-      border-left: 1px solid black;
-     
-}
+   
 
 
 .a {
@@ -90,6 +81,7 @@ $st: #F4ECE6;
 body {
   padding: 0;
   background-image: radial-gradient(circle,$lb, $rb);  
+  background-color: black;
 }
 
 .space {
