--- a/index.html
+++ b/index.html
@@ -6,44 +6,55 @@
 </head>
   <div class="topnav">
     <style>
-     h1 {
- font: 300 70px/1.3 'Oleo Script',sans-serif;
+h1 {
+  font: 300 70px/1.3 'Oleo Script',sans-serif;
   color: White;
-  text-shadow: 4px 4px 0px rgba(0,0,0,0.1);
-  text-align:center;
+  text-shadow: 4px 4px 0px rgba(0, 0, 0, 0.1);
+  text-align: center;
 }
-p{
+
+p {
   font: 50 80px/.2 'Oleo Script',sans-serif;
   font-size: 50px;
   color: WHite;
-  text-shadow: 4px 4px 0px rgba(0,0,0,0.1);
-  text-align:center;
+  text-shadow: 4px 4px 0px rgba(0, 0, 0, 0.1);
+  text-align: center;
 }
 
 .wrapper {
-    display: grid;
-    grid-gap: 1px;
-        height: 600px;
-    }
+  display: grid;
+  grid-gap: 1px;
+  height: 600px;
+}
 
-   
-
+.box {
+  background-color: pink;
+  color: #fff;
+  border-radius: 1px;
+  padding: 20px;
+  font-size: 150%;
+  border-bottom: 1px solid black;
+  border-left: 1px solid black;
+}
 
 .a {
-        grid-column: 1 / span 2;
-    }
-    .b {
-        grid-column: 3 ;
-        grid-row: 1 / span 2;
-    }
-    .c {
-        grid-column: 1 ;
-        grid-row: 2 ;
-    }
-    .d {
-        grid-column: 2 ;
-        grid-row: 2 ;
-    }
+  grid-column: 1 / span 2;
+}
+
+.b {
+  grid-column: 3;
+  grid-row: 1 / span 2;
+}
+
+.c {
+  grid-column: 1;
+  grid-row: 2;
+}
+
+.d {
+  grid-column: 2;
+  grid-row: 2;
+}
 
 ul {
   list-style-type: none;
@@ -54,48 +65,43 @@ ul {
 
 li {
   float: right;
- 
 }
 
 li a {
   display: block;
   padding: 20px;
   text-decoration: none;
-  color:#C52233
+  color: #C52233;
 }
 
 .topnav a:hover {
-  background-color:#D56AA0 ;
+  background-color: #D56AA0;
   color: #C52233;
 }
 
 .topnav a.active {
-  background-color:#BB7E8C ;
+  background-color: #BB7E8C;
   color: #C52233;
 }
 
-$lb: #2A2B3F;
-$rb: #272530;
-$st: #F4ECE6;
-
 body {
   padding: 0;
-  background-image: radial-gradient(circle,$lb, $rb);  
-  background-color: black;
+  background-image: radial-gradient(circle, #2A2B3F, #272530);
 }
 
 .space {
   width: 98vw;
   height: 100vh;
-  .earth {
-    width: 80vw;
-    height: 90vh;
-    left: 10vw;
-    z-index: 99999;
-    padding-top: 50px;
-    padding-left: 150px;
-  }
 }
+.space .earth {
+  width: 80vw;
+  height: 90vh;
+  left: 10vw;
+  z-index: 99999;
+  padding-top: 50px;
+  padding-left: 150px;
+}
+
   
  
    </style>
