--- a/index.html
+++ b/index.html
@@ -27,16 +27,6 @@ p {
   height: 600px;
 }
 
-.box {
-  background-color: pink;
-  color: #fff;
-  border-radius: 1px;
-  padding: 20px;
-  font-size: 150%;
-  border-bottom: 1px solid black;
-  border-left: 1px solid black;
-}
-
 .a {
   grid-column: 1 / span 2;
 }
@@ -96,6 +86,7 @@ body {
 .space .earth {
   width: 80vw;
   height: 90vh;
+  position:bottom;
   left: 10vw;
   z-index: 99999;
   padding-top: 50px;
