--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@ body {
   width: 98vw;
   height: 100vh;
 }
-.space .earth {
+ .earth {
   width: 80vw;
   height: 90vh;
-  position:bottom;
+  botton:0;
   left: 10vw;
   z-index: 99999;
   padding-top: 50px;
