--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+<!--Eath Design by DesignDepot, CodePen, Space-->  
 <html>
   <title>Personal Portfolio</title>
 <head>
@@ -86,7 +87,7 @@ body {
  .earth {
   width: 80vw;
   height: 90vh;
-  botton:0;
+  bottom:0;
   left: 10vw;
   z-index: 99999;
   padding-top: 50px;
