--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <!--Eath Design by DesignDepot, CodePen, Space-->  
-<html>
   <title>Personal Portfolio</title>
 <head>
  <link href='http://fonts.googleapis.com/css?family=Oleo+Script' rel='stylesheet' type='text/css'>
-</head>
+  <link rel="stylesheet" type="text/css" href="style.css"></head>
   <div class="topnav">
+    <html>
     <style>
 h1 {
   font: 300 70px/1.3 'Oleo Script',sans-serif;
