--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
 h1 {
   font: 300 70px/1.3 'Oleo Script',sans-serif;
-  color: White;
+  color: #FFFFFF;
   text-shadow: 4px 4px 0px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
@@ -17,7 +17,7 @@ h1 {
 p {
   font: 50 80px/.2 'Oleo Script',sans-serif;
   font-size: 50px;
-  color: WHite;
+  color:#FFFFFF;
   text-shadow: 4px 4px 0px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
@@ -98,66 +98,58 @@ body {
   grid-template-columns: auto ;
   grid-template-rows: 100px 30px;
   grid-gap: 10px;
-  background-color: grey;
+  background-color: #808080;
   padding: 10px;
   }
 
-@import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css";
-
-@mixin font-smoothing() {
-    // Font antialising on Mac OS X
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
 .social-icons {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-
-    li {
-        display: inline-block;
-        margin: 0 0.25em;
-      float:left;
-    }
-
-    span {
-        display: block;
-        width: 0; height: 0;
-        overflow: hidden;
-    }
-
-    a {
-        display: inline-block;
-        width: 2.5em;
-        height: 2.5em;
-        border-radius: 50%;
-        text-decoration: none;
-        color: white;
-        text-align: center;
-
-        &:before {
-            font: 1.5em/1.75 "FontAwesome";
-            @include font-smoothing();
-        }
-
-        $icons: (
-            google:   (char: "\f0d5", color: #dd4b39),
-            facebook: (char: "\f09a", color: #3b5998),
-            github:   (char: "\f09b", color: #231f20),
-        );
-
-        @each $social, $icon in $icons {
-            &[href*="#{$social}"] {
-                background-color: map-get($icon, color);
-
-                &:before {
-                    content: map-get($icon, char);
-                }
-            }
-        }
-    }
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
+.social-icons li {
+  display: inline-block;
+  margin: 0 0.25em;
+  float: left;
+}
+.social-icons span {
+  display: block;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+}
+.social-icons a {
+  display: inline-block;
+  width: 2.5em;
+  height: 2.5em;
+  border-radius: 50%;
+  text-decoration: none;
+  color: white;
+  text-align: center;
+}
+.social-icons a:before {
+  font: 1.5em/1.75 "FontAwesome";
+  -webkit-font-smoothing: antialiased;
+}
+.social-icons a[href*="google"] {
+  background-color: #dd4b39;
+}
+.social-icons a[href*="google"]:before {
+  content: "";
+}
+.social-icons a[href*="facebook"] {
+  background-color: #3b5998;
+}
+.social-icons a[href*="facebook"]:before {
+  content: "";
+}
+.social-icons a[href*="github"] {
+  background-color: #231f20;
+}
+.social-icons a[href*="github"]:before {
+  content: "";
+}
+
   
  
    </style>
@@ -270,7 +262,7 @@ body {
     <div class="grid-container">
 <ul class="social-icons">
   <li>
-    <a href="https://plus.google.com/‎">
+    <a href="https://plus.google.com/">
       <span>Google+</span>
     </a>
   </li>
