--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <!--Eath Design by DesignDepot, CodePen, Space-->  
+
   <title>Personal Portfolio</title>
 <head>
  <link href='http://fonts.googleapis.com/css?family=Oleo+Script' rel='stylesheet' type='text/css'>
@@ -78,6 +79,7 @@ li a {
 body {
   padding: 0;
   background-image: radial-gradient(circle, #2A2B3F, #272530);
+  <a href="dog.psd"></a>
 }
 
 .space {
