--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ body {
   <body>
      <h1> Grace Lee </h1>
     <p> Amateur Web Designer based in Westview Highschool</p>
-    <a href="dog.psd"></a>
+    <img src="dog.psd">
     <div class="space">
   <div class="earth">
     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
