--- a/index.html
+++ b/index.html
@@ -151,7 +151,11 @@ body {
 .social-icons a[href*="github"]:before {
   content: "";
 }
-
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
   
  
    </style>
@@ -163,7 +167,7 @@ body {
   <body>
      <h1> Grace Lee </h1>
     <p> Amateur Web Designer based in Westview Highschool</p>
-    <img src="dog.psd">
+    <img src="dog.png">
     <div class="space">
   <div class="earth">
     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
