--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ img {
   <body>
      <h1> Grace Lee </h1>
     <p> Amateur Web Designer based in Westview Highschool</p>
-    <img src="dog.png">
+    <img src="helmet.png">
     <div class="space">
   <div class="earth">
     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
