--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
  <link href='http://fonts.googleapis.com/css?family=Oleo+Script' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="style.css"></head>
   <div class="topnav">
+    </head>
     <html>
     <style>
 h1 {
