--- a/index.html
+++ b/index.html
@@ -191,6 +191,11 @@ body {
     display:block;
     margin:auto;
 }
+ .center{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
    </style>
       <ul>
   <li><a href="#contact">Contact</a></li>
@@ -202,7 +207,7 @@ body {
      <h1> Grace Lee </h1>
     </div>
     <p> Amateur Web Designer based in Westview Highschool</p>
-    <img src="helmet.png" style="width:100%">
+    <img src="helmet.png" style="width:100%; height:200px;" class="center" >
     <div class="space">
   <div class="earth">
     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
