--- a/index.html
+++ b/index.html
@@ -10,15 +10,12 @@
     <html>
     <style>
 h1 {
-  font: 300 70px/1.3 'Oleo Script',sans-serif;
   color: #FFFFFF;
   text-shadow: 4px 4px 0px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
 
 p {
-  font: 50 80px/.2 'Oleo Script',sans-serif;
-  font-size: 50px;
   color:#FFFFFF;
   text-shadow: 4px 4px 0px rgba(0, 0, 0, 0.1);
   text-align: center;
@@ -206,7 +203,7 @@ body {
     <div class="col-3 col-s-3 col-">
      <h1> Grace Lee </h1>
     </div>
-    <p> Amateur Web Designer based in Westview Highschool</p>
+    <p style="font-size:10vw;"> Amateur Web Designer based in Westview Highschool</p>
     <img src="helmet.png" style="width:100%; height:200px;" class="center" >
     <div class="space">
   <div class="earth">
