--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ h1 {
 }
 
 p {
+  font-size:50px;
   color:#FFFFFF;
   text-shadow: 4px 4px 0px rgba(0, 0, 0, 0.1);
   text-align: center;
@@ -203,7 +204,7 @@ body {
     <div class="col-3 col-s-3 col-">
      <h1> Grace Lee </h1>
     </div>
-    <p style="font-size:10vw;"> Amateur Web Designer based in Westview Highschool</p>
+    <p style="font-size:5vw;"> Amateur Web Designer based in Westview Highschool</p>
     <img src="helmet.png" style="width:50%; height:200px;" class="center" >
     <div class="space">
   <div class="earth">
