--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
-<!--Eath Design by DesignDepot, CodePen, Space-->  
+<!--Eath Design by DesignDepot, CodePen, Space, https://codepen.io/designdepot/-->  
+<!--SOcial Icons by SeedLogix, https://codepen.io/seedlogix789/-->
 
   <title>Personal Portfolio</title>
 <head>
