--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <title>Personal Portfolio</title>
 <head>
- <link href='http://fonts.googleapis.com/css?family=Oleo+Script' rel='stylesheet' type='text/css'>
+ <link href="http://fonts.googleapis.com/css?family=Oleo+Script" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" href="style.css"></head>
   <div class="topnav">
  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
