--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Personal Portfolio</title>
 <head>
  <link href="http://fonts.googleapis.com/css?family=Oleo+Script" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" type="text/css" href="style.css"></head>
+  <link rel="stylesheet" type="text/css" href="style.css">
   <div class="topnav">
  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   </head>
