--- a/index.html
+++ b/index.html
@@ -105,6 +105,22 @@ body {
   .col-11 {width: 91.66%;}
   .col-12 {width: 100%;}
 }
+.grid-container {
+  display: grid;
+  grid-template-columns: 100% ;
+  grid-template-rows: 100px 30px;
+  grid-gap: 10px;
+  background-color: grey;
+  padding: 10px;
+  }
+.grid1 {
+  display: grid;
+  grid-template-columns: auto ;
+  grid-template-rows: 400px 30px;
+  grid-gap: 10px;
+  background-color: purple;
+ padding: 20px;
+}
  .social-icons {
     display: flex;
     flex-wrap: wrap;
