--- a/index.html
+++ b/index.html
@@ -166,6 +166,11 @@ p{
   font-size:20px;
   color: white;
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
    </style>
       <ul>
   <li><a href="#contact">Contact</a></li>
@@ -178,7 +183,7 @@ p{
 	 </div>
     <h2 style="font-size:5vw;"> Amateur Web Designer based in Westview Highschool</h2>
 	</div>
-    <img src="helmet.png">
+    <img src="helmet.png" class="center">
     <div class="space">
   <div class="earth">
     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
