--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!--Eath Design by DesignDepot, CodePen, Space-->  
-
+<!--Eath Design by DesignDepot, CodePen, Space,https://codepen.io/designdepot/-->  
+<!--Social icons by SeedLogix, https://codepen.io/seedlogix789/-->
   <title>Personal Portfolio</title>
 <head>
   <div class="topnav">
@@ -37,7 +37,7 @@ li a {
   display: block;
   padding: 20px;
   text-decoration: none;
-  color: #C52233;
+  color: white;
 }
 
 .topnav a:hover {
