--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ p{
 	 </div>
     <h2 style="font-size:5vw;"> Amateur Web Designer based in Westview Highschool</h2>
 	</div>
-    <img src="helmet.png" class="center">
+    <img src="helmet.png" style="width:50%" class="center">
     <div class="space">
   <div class="earth">
     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
