--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@ body {
   grid-gap: 10px;
   background-color: grey;
   padding: 10px;
+position: fixed;	      
   }
 .grid1 {
   display: grid;
@@ -120,6 +121,7 @@ body {
   grid-gap: 10px;
   background-color: purple;
  padding: 20px;
+position: fixed;
 }
  .social-icons {
     display: flex;
