--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <html>
     <style>
 h1 {
-font-family: 'Lobster', cursive;
+font-family: "Lobster", cursive;
   color: #FFFFFF;
   text-shadow: 4px 4px 0px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
 
 h2 {
-font-family: 'Lobster', cursive;
+font-family: "Lobster", cursive;
   font-size: 50px;
   color:#FFFFFF;
   text-shadow: 4px 4px 0px rgba(0, 0, 0, 0.1);
