--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
 <head>
   <div class="topnav">
 	</div>
- 
+ <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
   </head>
     <html>
     <style>
 h1 {
-font-family: "Lobster", cursive;
+font-family: 'Lobster', cursive;
   color: #FFFFFF;
   text-shadow: 4px 4px 0px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
 
 h2 {
-font-family: "Lobster", cursive;
+font-family: 'Lobster', cursive;
   font-size: 50px;
   color:#FFFFFF;
   text-shadow: 4px 4px 0px rgba(0, 0, 0, 0.1);
