--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ body {
   grid-template-columns: auto ;
   grid-template-rows: 400px 30px;
   grid-gap: 10px;
-  background-color: #BE3E82;
+  background-color: #88D9E6;
  padding: 20px;
 
 }
