--- a/index.html
+++ b/index.html
@@ -176,6 +176,15 @@ p{
   margin-right: auto;
   padding: 10px;
 }
+	    
+#page1{
+height: 200px;
+}
+	
+body{
+height:1000px
+}
+	    
    </style>
       <ul>
   <li><a href="#contact">Contact</a></li>
