--- a/index.html
+++ b/index.html
@@ -295,10 +295,12 @@ height:1000px
 
   </div> <!--EARTH END-->  
     
- 
+ <div id="page1">
+<a id="about" class="smooth"></a>
    <div class="grid1">
    <p> I am currently based in Westview Highschool. I have a 3.5 unweighted GPA and a 3.6 weighted GPA. I am currently in AP Biology and took Honors English in my freshman year of highschool. I plan to study computer science for my major and biology for my minor.
     </div>
+	    </div>
     <div class="grid-container">
     <div class="social-icons">
   <a href="#" target="_blank"><img src="https://seedlogix.com/hubs/themes/clients/images/facebook-white.svg">Facebook</a>
