--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ body {
 .grid1 {
   display: grid;
   grid-template-columns: auto ;
-  grid-template-rows: 400px 30px;
+  grid-template-rows: 20% 5%;
   grid-gap: 10px;
   background-color: #88D9E6;
  padding: 20px;
@@ -178,11 +178,11 @@ p{
 }
 	    
 #page1{
-height: 400px;
+height: 20%;
 }
 	
 body{
-height:1000px
+height:100%;
 }
 	    
    </style>
