--- a/index.html
+++ b/index.html
@@ -125,6 +125,13 @@ body {
  padding: 20px;
 
 }
+	    
+.grid1 left {
+float:left;
+width:300px;
+}
+
+	    
  .social-icons {
     display: flex;
     flex-wrap: wrap;
