--- a/index.html
+++ b/index.html
@@ -126,9 +126,11 @@ body {
 
 }
 	    
-.grid1 left {
-float:left;
-width:300px;
+.grid1 right {
+float:right;
+width:600px;
+margin-right:50px;
+margin-top:-10px;
 }
 
 	    
@@ -305,8 +307,10 @@ height:100%;
  <div id="page1">
 <a id="about" class="smooth"></a>
    <div class="grid1">
+<div class="right">
    <p> I am currently based in Westview Highschool. I have a 3.5 unweighted GPA and a 3.6 weighted GPA. I am currently in AP Biology and took Honors English in my freshman year of highschool. I plan to study computer science for my major and biology for my minor.
     </div>
+	    </div>
 	    </div>
     <div class="grid-container">
     <div class="social-icons">
