--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ height:100%;
     </svg>
 
   </div> <!--EARTH END-->  
-    
+    <div class="grid1">
  <div id="page1">
 <a id="about" class="smooth"></a>
    <p class="right"> I am currently based in Westview Highschool. I have a 3.5 unweighted GPA and a 3.6 weighted GPA. I am currently in AP Biology and took Honors English in my freshman year of highschool. I plan to study computer science for my major and biology for my minor.
