--- a/index.html
+++ b/index.html
@@ -300,11 +300,13 @@ height:100%;
  <div id="page1">
 <a id="about" class="smooth"></a>
 	 <h3 class="right"><b> About Me</h3></b>
-   <p class="right"> I am currently based in Westview Highschool. I have a 3.5 unweighted GPA and a 3.6 weighted GPA. I am currently in AP Biology and took Honors English in my freshman year of highschool. I plan to study computer science for my major and biology for my minor.
+   <p class="right"> I am currently based in Westview Highschool. I have a 3.5 unweighted GPA and a 3.6 weighted GPA. I am currently in AP Biology and took Honors English in my freshman year of highschool. 
+	   I plan to study computer science for my major and biology for my minor. i also want to study Computer Science as a career path because I like to code. 
 	   I am also in the Red Cross Club and have many community service hours.
 	 </p>
 	 <h3 class="right"><b> Skills</h3></b>
-	 <p class="right"> I am skilled in HTML and CSS.</p>
+	 <p class="right"> I am skilled in HTML and CSS. I can also understand Korean but I am not very proficient in speaking the language.
+	 </p>
 	    </div>
 	    </div>
 	    
