--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ body {
 	    
 .right{
 float:right;
-width:700px;
+width:100vh;
 }
 
 	    
@@ -557,7 +557,6 @@ height:100%;
   </div>
 </div>
 		  </div>
-	    </div>
 	    </div>
     <div class="grid-container">
     <div class="social-icons">
