--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ body {
 .grid1 {
   display: grid;
   grid-template-columns: auto ;
-  grid-template-rows:100vh 14vw;
+  grid-template-rows:50vh 14vw;
   grid-gap: 4vw;
   background-color: #88D9E6;
  padding: 20px;
@@ -129,8 +129,8 @@ body {
 .grid2 {
   display: grid;
   grid-template-columns: auto ;
-  grid-template-rows: 400vh 30vw;
-  grid-gap: 10px;
+  grid-template-rows: 200vh 20vw;
+  grid-gap: 4vh;
  padding: 20px;
 
 }
@@ -326,7 +326,7 @@ height:100%;
 	 </p>
 	    </div>
 	    </div>
-	 
+	    </div>
     <div class="grid-container">
     <div class="social-icons">
   <a href="#" target="_blank"><img src="https://seedlogix.com/hubs/themes/clients/images/facebook-white.svg">Facebook</a>
@@ -339,7 +339,7 @@ height:100%;
 														
          <a href="https://codepen.io/raz2/pen/pBgbra" target="_blank"><img src="https://t6.rbxcdn.com/fb34a9180ae0133d10869fad50dc2e6d"</a>
       </div>
-    
+	    </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="https://github.com/kswedberg/jquery-smooth-scroll/blob/master/jquery.smooth-scroll.min.js"></script>
