--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@ body {
   display: grid;
   grid-template-columns: auto ;
   grid-template-rows: 70vh 1vw;
+background-color: #BE92A2;
   grid-gap: 4vh;
  padding: 20px;
 
