--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ body {
   grid-template-rows:50vh 10vw;
   grid-gap: 10vw;
   background-color: #88D9E6;
- padding: 20px;
+ padding: 10vh;
 
 }
 	    
@@ -132,7 +132,7 @@ body {
   grid-template-rows: 70vh 10vw;
 background-color: #BE92A2;
   grid-gap: 10vh;
- padding: 20px;
+ padding: 10vh;
 
 }
 	    
@@ -481,6 +481,7 @@ height:100%;
 	</div>
 			    </div>
 		    </div>
+	    </div>
     <div class="grid-container">
     <div class="social-icons">
   <a href="#" target="_blank"><img src="https://seedlogix.com/hubs/themes/clients/images/facebook-white.svg">Facebook</a>
