--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ body {
 .grid-container {
   display: grid;
   grid-template-columns: 100% ;
-  grid-template-rows: 30vh 10vw;
+  grid-template-rows: 20vh 5vw;
   grid-gap: 10vw;
   background-color: grey;
   padding: 10px;
@@ -248,37 +248,6 @@ height:100%;
   -ms-transform: scale(1.2) rotate(-3deg); /* IE 9 */
   -webkit-transform: scale(1.2) rotate(-3deg); /* Safari and Chrome */
 }
-.fa-heart-o:hover {
-  animation-name: pulse; 
-  animation-duration: 0.5s; 
-  animation-iteration-count: infinite; 
-  -webkit-animation-name: pulse; 
-  -webkit-animation-duration: 0.5s; 
-  -webkit-animation-iteration-count: infinite; 
-}
-.likes {
-  width:45px;
-  height:35px;
-  background:#EC4678;
-  opacity: 0.85;
-  filter: alpha(opacity=85); /* IE8 and lower */
-  zoom: 1; /* set "zoom", "width" or "height" to trigger "hasLayout" in IE 7 and lower */
-  font-size:1em;
-  color:white;
-  text-align: center;
-  vertical-align: middle;
-  line-height: 35px; 
-  position:absolute;
-  left:0;
-  top:20px;
-  -webkit-border-radius:0 5px 5px 0px;
-  border-radius:0 5px 5px 0px;
-  -webkit-box-shadow: 1px 1px 3px rgba(0,0,0,0.4);
-  -moz-box-shadow: 1px 1px 3px rgba(0,0,0,0.4);
-  box-shadow: 1px 1px 3px rgba(0,0,0,0.4);
-  text-shadow: 1px 1px 2px rgba(214, 22, 80, 1);
-  border-left:5px dotted #D61650;
-}
 .name {
   width:100%;
   height:50px;
@@ -294,19 +263,6 @@ height:100%;
   line-height: 50px; 
   text-shadow: 1px 1px 2px rgba(51, 145, 135, 1);
   border-bottom:1px dotted #339187;
-}
-.media {
-  width:100%;
-  font-size:0.7em;
-  color:#777;
-  padding:15px;
-  text-align: center;
-  vertical-align: middle;
-  line-height: 20px;
-}
-.media li {
-  display:inline-block;
-  padding:0 7px;
 }
 /* Pulse Animation for Google Chrome and Safari */
 @-webkit-keyframes pulse {
@@ -328,6 +284,7 @@ height:100%;
       <ul>
   <li><a href="#contact">Contact</a></li>
   <li><a href="#about">About</a></li>
+<li><a href="#Pictures">Works</a></li>
         <li><a class="active" href="#home">Home</a></li>
 </ul>
   <body>
