--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@ height:100%;
 	    </div>
 	    <div class="grid2">
 		    <div id="page2">
+			    <a id="Pictures" class="smooth"></a>
 	    <div id="content">
  <!-- Recipe Start -->
 	<div class="recipe"> 
