--- a/index.html
+++ b/index.html
@@ -392,13 +392,13 @@ height:100%;
     <div class="grid1">
  <div id="page1">
 <a id="about" class="smooth"></a>
-	 <h3 class="right"><b> About Me</h3></b>
-   <p class="right"> I am currently based in Westview Highschool. I have a 3.5 unweighted GPA and a 3.6 weighted GPA. I am currently in AP Biology and took Honors English in my freshman year of highschool. 
+	<br> <h3 class="right"><b> About Me</h3></b>
+  <br> <p class="right"> I am currently based in Westview Highschool. I have a 3.5 unweighted GPA and a 3.6 weighted GPA. I am currently in AP Biology and took Honors English in my freshman year of highschool. 
 	   I plan to study computer science for my major and biology for my minor. i also want to study Computer Science as a career path because I like to code. 
 	   I am also in the Red Cross Club and have many community service hours.
 	 </p>
-	 <h3 class="right"><b> Skills</h3></b>
-	 <p class="right"> I am skilled in HTML and CSS. I can also understand Korean but I am not very proficient in speaking the language.
+	<br> <h3 class="right"><b> Skills</h3></b>
+	<br> <p class="right"> I am skilled in HTML and CSS. I can also understand Korean but I am not very proficient in speaking the language.
 	 </p>
 	    </div>
 	    </div>
@@ -441,7 +441,6 @@ height:100%;
 	    </div>
     <div class="grid-container">
     <div class="social-icons">
-	    <div class="center">
   <a href="#" target="_blank"><img src="https://seedlogix.com/hubs/themes/clients/images/facebook-white.svg">Facebook</a>
         
         <!-- YouTube -->
