--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
     <html>
     <style>
-h1 {
+.font {
 font-family: 'Lobster', cursive;
   color: #FFFFFF;
   text-shadow: 4px 4px 0px rgba(0, 0, 0, 0.1);
@@ -288,7 +288,7 @@ height:100%;
 </ul>
   <body>
    <div class="col-3 col-s-3 col-">
-     <h1> Grace Lee </h1>
+     <h1 class="font"> Grace Lee </h1>
 	 </div>
     <h2 style="font-size:5vw;"> Amateur Web Designer based in Westview Highschool</h2>
 	</div>
