--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ height:100%;
 	   I plan to study computer science for my major and biology for my minor. i also want to study Computer Science as a career path because I like to code. 
 	   I am also in the Red Cross Club and have many community service hours.
 	 </p>
-	<br> <h3 class="right"><b> Skills</h3></b><br>
+	<br> <h3 class="right"><b> Skills</h3></b><br><br>
 	<br> <p class="right"> I am skilled in HTML and CSS. I can also understand Korean but I am not very proficient in speaking the language.
 	 </p>
 	    </div>
