--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@ float:right;
 width:50vw;
 }
 
+.left {
+float:left;
+width: 30vw;
+	]
 	    
  .social-icons {
     display: flex;
@@ -400,6 +404,7 @@ height:100%;
 	<br> <h3 class="right"><b> Skills</h3></b><br>
 	<br><br> <p class="right"> I am skilled in HTML and CSS. I can also understand Korean but I am not very proficient in speaking the language.<br>
 	 </p>
+	 <img src="grace(1).png">
 	    </div>
 	    </div>
 	    <div class="grid2">
