--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ float:right;
 width:50vw;
 }
 
-.left {
+.grace {
 float:left;
 width: 30vw;
 	]
@@ -404,7 +404,7 @@ height:100%;
 	<br> <h3 class="right"><b> Skills</h3></b><br>
 	<br><br> <p class="right"> I am skilled in HTML and CSS. I can also understand Korean but I am not very proficient in speaking the language.<br>
 	 </p>
-	 <img src="grace(1).png">
+	 <img class="grace" src="grace (1).png">
 	    </div>
 	    </div>
 	    <div class="grid2">
