--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ width:50vw;
 
 .grace {
 float:left;
-width: 30vw;
+width: 20vw;
 position: relative;
 top: -200px;
 	    }
@@ -403,7 +403,7 @@ height:100%;
 	<br> </p>
 	 <br> <h3 class="right"><b> Community service</h3></b>
 	
-	<br> <h3 class="right"><b> Skills</h3></b>\
+	<br> <h3 class="right"><b> Skills</h3></b>
 	<br><p class="right"> I am skilled in HTML and CSS. I can also understand Korean but I am not very proficient in speaking the language.<br>
 	 </p>
 	 <img class="grace" src="grace (2).png">
