--- a/index.html
+++ b/index.html
@@ -400,9 +400,9 @@ height:100%;
 	<br> <h3 class="right"><b> About Me</h3></b><br>
   <br> <p class="right"> I am currently based in Westview Highschool. I have a 3.5 unweighted GPA and a 3.6 weighted GPA. I am currently in AP Biology and took Honors English in my freshman year of highschool. 
 	   I plan to study computer science for my major and biology for my minor. I also want to study Computer Science as a career path because I like to code. 
-	<br> </p>
-	 <br> <h3 class="right"><b> Community service</h3></b>
-	<p class="right"> I have done many hours of Comunity Service by being in the Red Cross Club and also volunteering every SUnday.
+	 </p> <br>
+	 <br> <h3 class="right"><b> Community service</h3></b><br>
+	<p class="right"> I have done many hours of Comunity Service by being in the Red Cross Club and also volunteering every Sunday.
 	<br> <h3 class="right"><b> Skills</h3></b>
 	<br><p class="right"> I am skilled in HTML and CSS. I can also understand Korean but I am not very proficient in speaking the language.<br>
 	 </p>
