--- a/index.html
+++ b/index.html
@@ -145,6 +145,11 @@ width: 30vw;
 position: relative;
 top: -200px;
 	    }
+.bottom{
+bottom:200px;
+float:left;
+width: 30vw;
+	    }
 	    
  .social-icons {
     display: flex;
@@ -407,7 +412,7 @@ height:100%;
 	 <p class="right"> I am skilled in HTML and CSS. I can also understand Korean but I am not very proficient in speaking the language.<br>
 	 </p>
 	 <img class="grace" src="grace (2).png">
-	 <p class="grace"><b>This is me!</p>
+	 <p class="bottom"><b>This is me!</p>
 	    </div>
 	    </div>
 	    <div class="grid2">
