--- a/index.html
+++ b/index.html
@@ -273,6 +273,22 @@ height:100%;
   text-shadow: 1px 1px 2px rgba(51, 145, 135, 1);
   border-bottom:1px dotted #339187;
 }
+	.media {
+  width:100%;
+	height: 100px;
+  font-size:0.7em;
+  color:#777;
+  padding:15px;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 20px;
+}
+.media li {
+  display:inline-block;
+	height:100px;
+  padding:0 7px;
+}   
+	 
 /* Pulse Animation for Google Chrome and Safari */
 @-webkit-keyframes pulse {
   from {
@@ -425,6 +441,11 @@ height:100%;
 	    	<img src="earth.jpg" style="height:250px"> 
 	 		<div class="name">
 	 			<h3>Photoshop Project</h3>
+				<ul class="media">
+		    <li><i class="fa fa-clock-o"></i> 45 Minutes</li>
+		    <li><i class="fa fa-leaf"></i> 175 Calories</li>
+		    <li><i class="fa fa-cutlery"></i> 2 People</li>
+  		</ul>
 	 		</div>
 		</div>
  
