--- a/index.html
+++ b/index.html
@@ -441,11 +441,7 @@ height:100%;
 	    	<img src="earth.jpg" style="height:250px"> 
 	 		<div class="name">
 	 			<h3>Photoshop Project</h3>
-				<ul class="media">
-		    <li><i class="fa fa-clock-o"></i> 45 Minutes</li>
-		    <li><i class="fa fa-leaf"></i> 175 Calories</li>
-		    <li><i class="fa fa-cutlery"></i> 2 People</li>
-  		</ul>
+				<p> this was for Web Design, on the 
 	 		</div>
 		</div>
  
