--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@ height:100%;
 	    	<img src="earth.jpg" style="height:250px"> 
 	 		<div class="name">
 	 			<h3>Photoshop Project</h3>
-				<p> this was for Web Design, on the 
+				<p> this was for Web Design, on the </p>
 	 		</div>
 		</div>
  
