--- a/index.html
+++ b/index.html
@@ -287,7 +287,16 @@ height:100%;
   display:inline-block;
 	height:100px;
   padding:0 7px;
-}   
+}
+footer {
+  font-size:0.7em;
+  color: #339187;
+  margin:50px 0 0 0;
+}
+a:link, a:visited {color: #339187; text-decoration:none;font-weight:700;}
+a:hover {color: #D61650;text-decoration:none;}
+a:active {text-decoration:underline;}
+  
 	 
 /* Pulse Animation for Google Chrome and Safari */
 @-webkit-keyframes pulse {
@@ -441,7 +450,11 @@ height:100%;
 	    	<img src="earth.jpg" style="height:250px"> 
 	 		<div class="name">
 	 			<h3>Photoshop Project</h3>
-				<p> this was for Web Design, on the </p>
+				<ul class="media">
+		    <li><i class="fa fa-clock-o"></i> 45 Minutes</li>
+		    <li><i class="fa fa-leaf"></i> 175 Calories</li>
+		    <li><i class="fa fa-cutlery"></i> 2 People</li>
+  		</ul>
 	 		</div>
 		</div>
  
