--- a/index.html
+++ b/index.html
@@ -450,15 +450,11 @@ a:active {text-decoration:underline;}
 	    	<img src="earth.jpg" style="height:250px"> 
 	 		<div class="name">
 	 			<h3>Photoshop Project</h3>
-				<ul class="media">
-		    <li><i class="fa fa-clock-o"></i> 45 Minutes</li>
-		    <li><i class="fa fa-leaf"></i> 175 Calories</li>
-		    <li><i class="fa fa-cutlery"></i> 2 People</li>
-  		</ul>
 	 		</div>
 		</div>
  
 	</div>
+<p> This project was for web design, it was created on the 7 of May, and the task was to create something using photoshop. I am highlighting my creativity in this project and my knowledge of phtoshop.</p>
   <!-- Recipe End -->
    <!-- Recipe Start -->
 	<div class="recipe"> 
