--- a/index.html
+++ b/index.html
@@ -450,12 +450,13 @@ a:active {text-decoration:underline;}
 	    	<img src="earth.jpg" style="height:250px"> 
 	 		<div class="name">
 	 			<h3>Photoshop Project</h3>
+				<ul class="media"= This project was for web design, it was created on the 7 of May, and the task was to create something using photoshop. I am highlighting my creativity in this project and my knowledge of phtoshop.</p>
+				</ul>
 	 		</div>
 		</div>
  
 	</div>
-<p> This project was for web design, it was created on the 7 of May, and the task was to create something using photoshop. I am highlighting my creativity in this project and my knowledge of phtoshop.</p>
-  <!-- Recipe End -->
+
    <!-- Recipe Start -->
 	<div class="recipe"> 
 		<div class="image">
