--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <!--Social icons by SeedLogix, https://codepen.io/seedlogix789/-->
   <title>Personal Portfolio</title>
 <head>
-  <div class="topnav">
-	</div>
+  <div id="navbar">
+  <a class="active" href="javascript:void(0)">Home</a>
+  <a href="javascript:void(0)">News</a>
+  <a href="javascript:void(0)">Contact</a>
+</div>
  <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
   </head>
     <html>
@@ -24,32 +27,30 @@ font-family: 'Lobster', cursive;
   text-align: center;
 }
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-}
-
-li {
-  float: right;
-}
-
-li a {
+#navbar a {
+  float: left;
   display: block;
-  padding: 20px;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
   text-decoration: none;
+  font-size: 17px;
+}
+
+#navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+#navbar a.active {
+  background-color: #4CAF50;
   color: white;
 }
 
-.topnav a:hover {
-  background-color: #D56AA0;
-  color: #C52233;
-}
-
-.topnav a.active {
-  background-color: #BB7E8C;
-  color: #C52233;
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 body {
@@ -322,10 +323,7 @@ a:active {text-decoration:underline;}
         <li><a class="active" href="#home">Home</a></li>
 </ul>
   <body>
-   <div class="col-3 col-s-3 col-">
-     <h1 class="font"> Grace Lee </h1>
-	 </div>
-    <h2 style="font-size:5vw;"> Amateur Web Designer based in Westview Highschool</h2>
+    <h2 style="font-size:5vw;"> Grace Lee's Personal Portfolio</h2>
 	</div>
     <img src="helmet.png" style="width:50%" class="center">
     <div class="space">
@@ -506,7 +504,20 @@ $('.smooth').on('click', function() {
 });
 </script>
 	 
+<script>
+window.onscroll = function() {myFunction()};
 
+var navbar = document.getElementById("navbar");
+var sticky = navbar.offsetTop;
+
+function myFunction() {
+  if (window.pageYOffset >= sticky) {
+    navbar.classList.add("sticky")
+  } else {
+    navbar.classList.remove("sticky");
+  }
+}
+</script>
     
     
   </body>
