--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <!--Social icons by SeedLogix, https://codepen.io/seedlogix789/-->
   <title>Personal Portfolio</title>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
  <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
   </head>
     <html>
