--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ a:active {text-decoration:underline;}
 }
 	    
    </style>
-  <div id="navbar">
+  <div class="navbar">
  <a href="#home">Home</a>
   <a href="#about">About</a>
 <a href="#works">Works</a>
