--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@ font-family: 'Lobster', cursive;
 }
 
 body {
-  padding: 0;
   background-image: radial-gradient(circle, #2A2B3F, #272530);
+padding: 10vh;
+  margin-top: 5vh;
   
 }
 
