--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@ font-family: 'Lobster', cursive;
 }
 
 body {
-  background-image: radial-gradient(circle, #2A2B3F, #272530);
-padding: 10vh;
-  margin-top: 5vh;
-  
+background-image: radial-gradient(circle, #2A2B3F, #272530);
+height:100%;
+padding:0px;
+margin-top: 5vh;  
 }
 
 .space {
@@ -202,10 +202,6 @@ height: 100vh;
 height: 200vh;
 	    }
 	    
-body{
-height:100%;
-margin:0;
-}
 
  * {
   margin: 0;
