--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body {
 background-image: radial-gradient(circle, #2A2B3F, #272530);
 height:100%;
 padding:0px;
-margin-top: 7vh;  
+margin-top: 10vh;  
 }
 
 .space {
@@ -108,6 +108,7 @@ margin-top: 7vh;
   grid-template-columns: 100% ;
   grid-template-rows: 50vh 10vw ;
   background-color: grey;
+padding: 0px;
 	      
   }
 .grid1 {
