--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@ width:50vw;
 .grace {
 float:left;
 width: 30vw;
-position: absolute;
+position: relative;
+z-index: -1;
 top: -200px;
 	    }
 .bottom{
