--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@ font-family: 'Lobster', cursive;
 }
 
 .navbar a {
-  float: left;
+  float: right;
   display: block;
-  color: #f2f2f2;
+  color: #E1F2FE;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -43,8 +43,7 @@ font-family: 'Lobster', cursive;
 }
 
 .navbar a:hover {
-  background: #ddd;
-  color: black;
+  background: #EDBFC6;
 }
 
 body {
@@ -434,7 +433,7 @@ a:active {text-decoration:underline;}
 	    </div>
 	    <div class="grid2">
 		    <div id="page2">
-			    <a id="Pictures" class="smooth"></a>
+			    <a id="works" class="smooth"></a>
 	    <div id="content">
  <!-- Recipe Start -->
 	<div class="recipe"> 
