--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ font-family: 'Lobster', cursive;
   display: block;
   color: #E1F2FE;
   text-align: center;
-  padding: 14px 16px;
+  padding: 3vw 5vh;
   text-decoration: none;
   font-size: 17px;
 }
