--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@ font-family: 'Lobster', cursive;
   display: block;
   color: #E1F2FE;
   text-align: center;
-  padding: 1vw 3vh;
+  padding: 1vw 4vh;
   text-decoration: none;
   font-size: 17px;
+  z-index: 1;
 }
 
 .navbar a:hover {
