--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ margin-top: 10vh;
   grid-template-rows: 50vh 10vw ;
   background-color: grey;
 padding: 0px;
+margin:0px;
 	      
   }
 .grid1 {
