--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@ margin-top: 10vh;
   display: grid;
   grid-template-columns: 100% ;
   grid-template-rows: 50vh 10vw ;
-  background-color: grey;
-padding: 0px;
-margin:0px;
+  background-color: 808080;
+  padding: 0px;
+  margin:0px;
 	      
   }
 .grid1 {
