--- a/index.html
+++ b/index.html
@@ -139,9 +139,10 @@ top: -200px;
 	    }
 .bottom{
 bottom: 150vh;
+position:relative;
 float:left;
 width: 30vw;
-	    }
+}
 	    
  .social-icons {
     display: flex;
