--- a/index.html
+++ b/index.html
@@ -137,11 +137,6 @@ width: 30vw;
 position: relative;
 top: -200px;
 	    }
-.bottom{
-bottom: 200vh;
-float:left;
-width: 30vw;
-}
 	    
  .social-icons {
     display: flex;
@@ -419,13 +414,13 @@ a:active {text-decoration:underline;}
 	   I plan to study computer science for my major and biology for my minor. I also want to study Computer Science as a career path because I like to code. 
 	 </p> 
 	 <h3 class="right"><br><b> Community service</h3></b>
-	<p class="right">I have done many hours of Comunity Service by being in the Red Cross Club and also volunteering every Sunday. I have also won numerous awards due to the amount of work and hours I put into 
-		my comunity service.
-	<br> <h3 class="right"><b><br> Skills</h3></b>
-	 <p class="right"> I am skilled in HTML and CSS. I can also understand Korean but I am not very proficient in speaking the language.<br>
+	<p class="right"><br>I have done many hours of Comunity Service by being in the Red Cross Club and also volunteering every Sunday. I have also won numerous awards due to the amount of work and hours I put into 
+		my comunity service.</p>
+	 <h3 class="right"><b><br> Skills</h3></b>
+	 <p class="right"><br> I am skilled in HTML and CSS. I can also understand Korean but I am not very proficient in speaking the language.<br>
 	 </p>
 	 <img class="grace" src="grace (2).png">
-	 <p class="bottom"><b>This is me!</p>
+	 <p><b>This is me!</p>
 	    </div>
 	    </div>
 	    <div class="grid2">
