--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ a:active {text-decoration:underline;}
 	    </div>
     <div class="grid-container">
     
-      <div class="container social-wrapper">
+      <div class="social-wrapper">
   <i id="facebook" class="fa fa-facebook-square fa-5x fa-social"></i>
   <i id="twitter" class="fa fa-twitter-square fa-5x fa-social"></i>
   <i id="codepen" class="fa fa-codepen fa-5x fa-social"></i>
