--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ width:50vw;
 float:left;
 width: 30vw;
 position: relative;
-top: -200px;
+top: -40vh;
 	    }
 	    
 #social-p{
@@ -247,7 +247,13 @@ a:active {text-decoration:underline;}
     opacity: 1.0;
   }
 }
-	    
+.icon {
+position: relative;
+top: -20vh;
+	    }
+.me {
+position: relative;	
+right: 2vw;	    
    </style>
   <div class="navbar">
 <a href="#contact">Contact</a>
