--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ right: 2vw;
 	 <p class="right"><br> I am skilled in HTML and CSS. I can also understand Korean but I am not very proficient in speaking the language.<br>
 	 </p>
 	 <img class="grace" src="grace (2).png">
-	 <p><b>This is me!</p>
+	 <p class="me"><b>This is me!</p>
 	    </div>
 	    </div>
 	    <div class="grid2">
@@ -424,7 +424,7 @@ right: 2vw;
           
         <li><a href="https://codepen.io/raz2/" target="_blank"><img src="http://i870.photobucket.com/albums/ab270/frenchspy007/codepenicon_zpsd9272c70.png"></a></li>      
          </ul>
-	    <h2>Contact me and see my other works through codepen!</p>
+	    <h2 class="icon">Contact me and see my other works through codepen!</p>
 	    </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
