--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@ height: 200vh;
   -webkit-box-shadow: 1px 1px 4px rgba(0,0,0,0.3);
   -moz-box-shadow: 1px 1px 4px rgba(0,0,0,0.3);
   box-shadow: 1px 1px 4px rgba(0,0,0,0.3);
+width: 100%;
 }
 .image {
   height:250px;
