--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ margin-top: 10vh;
 .grid-container {
   display: grid;
   grid-template-columns: 100% ;
-  grid-template-rows: 50vh 10vw ;
+  grid-template-rows: 10vw ;
   background-color: #808080;
   padding: 0px;
   margin:0px;  
@@ -80,7 +80,7 @@ margin-top: 10vh;
   grid-gap: 10vw;
   background-color: #88D9E6;
  padding: 5vh;
-
+ width:100%;
 }
 	    
 .grid2 {
