--- a/index.html
+++ b/index.html
@@ -67,11 +67,12 @@ margin-top: 10vh;
 .grid-container {
   display: grid;
   grid-template-columns: 100% ;
-  grid-template-rows: 10vw ;
+  grid-template-rows: 60vh 10vw ;
   background-color: #808080;
   padding: 0px;
   margin:0px;  
   width: 100%;
+  height:100%;
   }
 .grid1 {
   display: grid;
