--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ margin-top: 10vh;
   background-color: #88D9E6;
  padding: 5vh;
  width:100%;
-display: inline;
+overflow: auto;
 }
 	    
 .grid2 {
