--- a/index.html
+++ b/index.html
@@ -367,6 +367,7 @@ right: 2vw;
 
   </div> <!--EARTH END-->  
     <div class="grid1">
+<a id="home" class="smooth"></a>
  <div id="page1">
 <a id="about" class="smooth"></a>
 	<br> <h3 class="right"><b> About Me</h3></b><br>
@@ -422,7 +423,7 @@ right: 2vw;
 			    </div>
 		    </div>
 	    </div>
-<a id="contacts" class="smooth"></a>
+<a id="contact" class="smooth"></a>
     <div class="grid-container">
     
       <ul id="social">  
