--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@ overflow: auto;
   grid-template-columns: auto ;
   grid-template-rows: 40vh 20vw;
 background-color: #BE92A2;
-  grid-gap: 10vh;
+  grid-gap: 10vw;
  padding: 5vh;
+width:100%;
 overflow: auto;
 
 }
