--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ font-family: 'Lobster', cursive;
 
 body {
 background-image: radial-gradient(circle, #2A2B3F, #272530);
-height:100%;
+width:100%
 padding:0px;
 margin-top: 10vh;  
 }
@@ -169,7 +169,6 @@ height: 200vh;
 .recipe {
   background:#f1f1f1;
   max-width:300px;
-  height:300px;
   position:relative;
   display:inline-block;
   overflow:hidden;
