--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@ height: 200vh;
 .recipe {
   background:#f1f1f1;
   max-width:300px;
+ height: 300px;
   position:relative;
   display:inline-block;
   overflow:hidden;
