--- a/index.html
+++ b/index.html
@@ -366,6 +366,7 @@ right: 2vw;
 
   </div> <!--EARTH END-->  
     <div class="grid1">
+<div id="page1">
 <a id="about" class="smooth"></a>
 	<br> <h3 class="right"><b> About Me</h3></b><br>
   <br> <p class="right"> I am currently based in Westview Highschool. I have a 3.5 unweighted GPA and a 3.6 weighted GPA. I am currently in AP Biology and took Honors English in my freshman year of highschool. 
@@ -380,7 +381,9 @@ right: 2vw;
 	 <img class="grace" src="grace (2).png">
 	 <p class="me"><b>This is me!</p>
 	    </div>
+	    </div>
 	    <div class="grid2">
+	   <div id="page2">
 			    <a id="works" class="smooth"></a>
 	    <div id="content">
  <!-- Recipe Start -->
@@ -416,6 +419,8 @@ right: 2vw;
 	</div>
 			    </div>
 		    </div>
+	    </div>
+	    </div>
 	    </div>
 <a id="contact" class="smooth"></a>
     <div class="grid-container">
