--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@ height: 100vh;
   max-width:300px;
  height: 300px;
   position:relative;
+  overflow:hidden;
   display:inline-block;
   cursor: pointer;
   margin:0 10px 10px 0;
