--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ height: 100vh;
   box-sizing: border-box;
   list-style-type: none;
 }
-recipe {
+.recipe {
   background:#f1f1f1;
   max-width:300px;
   height:300px;
