--- a/index.html
+++ b/index.html
@@ -286,7 +286,8 @@ top: -20vh;
 	    }
 .me {
 position: relative;	
-right: 2vw;	    
+right: 2vw;	
+top: -20px;
    </style>
   <div class="navbar">
 <a href="#contact">Contact</a>
