--- a/index.html
+++ b/index.html
@@ -409,6 +409,11 @@ top: -15px;
 	 <h3 class="right"><b><br> Skills</h3></b>
 	 <p class="right"><br> I am skilled in HTML and CSS. I can also understand Korean but I am not very proficient in speaking the language.<br>
 	 </p>
+	<h3 class="right"><b><br> Highschool Education</h3></b>
+	 <p class="right"><br> I am planning on taking 2 more aps that specialize in computer science and 3 others involving math and science. 
+	<h3 class="right"><b><br> Future Education</h3></b>
+	<p class="right"><br> I am planning on attending the University of California Irvine or Cal Poly State University. These colleges specialize in computer science
+		and have good biology programs.
 	 <img class="grace" src="grace (2).png">
 	 <p class="me"><b>This is me!</p>
 	    </div>
