--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ margin-top: 10vh;
 .grid1 {
   display: grid;
   grid-template-columns: auto ;
-  grid-template-rows:40vh 20vw;
+  grid-template-rows:30vh 20vw;
   grid-gap: 10vw;
   background-color: #88D9E6;
  padding: 5vh;
@@ -413,7 +413,7 @@ top: -15px;
 	 <p class="right"><br> I am planning on taking 2 more aps that specialize in computer science and 3 others involving math and science. 
 	<h3 class="right"><b><br> Future Education</h3></b>
 	<p class="right"><br> I am planning on attending the University of California Irvine or Cal Poly State University. These colleges specialize in computer science
-		and have good biology programs.
+		and have good biology programs.</p>
 	 <img class="grace" src="grace (2).png">
 	 <p class="me"><b>This is me!</p>
 	    </div>
