--- a/index.html
+++ b/index.html
@@ -311,10 +311,6 @@ a:active {text-decoration:underline;}
   text-align: center;
 }
 
-.icon {
-position: relative;
-top: -20vh;
-	    }
 .me {
 position: relative;	
 right: 2vw;	
@@ -491,9 +487,9 @@ top: -15px;
 <a id="contact" class="smooth"></a>
     <div class="grid-container">
     <div class="wrap">
-      <div class="github icon2"><a href="https://www.github.com" target="_blank"></a></div>
-  <div class="codepen icon2"><a href="https://www.codepen.io" target="_blank"></a></div>
-	     <div class="plus icon2"><a href="https://www.plus.google.com" target="_blank"></a></div>
+      <div class="github icon2"><a href="https://github.com/WVCS/portfolio-gracelee2" target="_blank"></a></div>
+  <div class="codepen icon2"><a href="https://codepen.io/raz2/" target="_blank"></a></div>
+	     <div class="plus icon2"><a href="https://aboutme.google.com/u/0/?referer=gplus" target="_blank"></a></div>
 	   
 	    <h2 class="icon">Contact me and see my other works through codepen!</p>
 	    </div>
