--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ top: -40vh;
 .icon2{
   background-color:#222;
   background-repeat:no-repeat;
-  background-position:center center;
+  background-position:center center center;
   height: 5em;
   width: 5em;
   -webkit-transition: background-color 0.4s ease;
@@ -481,12 +481,12 @@ a:active {text-decoration:underline;}
 	    </div>
 <a id="contact" class="smooth"></a>
     <div class="grid-container">
+<h2 class="icon">Contact me and see my other works through codepen!</p>
     <div class="wrap">
       <div class="github icon2"><a href="https://github.com/WVCS/portfolio-gracelee2" target="_blank"></a></div>
   <div class="codepen icon2"><a href="https://codepen.io/raz2/" target="_blank"></a></div>
 	     <div class="plus icon2"><a href="https://aboutme.google.com/u/0/?referer=gplus" target="_blank"></a></div>
-	   
-	    <h2 class="icon">Contact me and see my other works through codepen!</p>
+	  
 	    </div>
 	    </div>
 
