--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ top: -40vh;
 .icon2{
   background-color:#222;
   background-repeat:no-repeat;
-  background-position:center center center;
+  background-position:center center;
   height: 5em;
   width: 5em;
   -webkit-transition: background-color 0.4s ease;
