--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ top: -40vh;
 	    
 .wrap{
   margin: 0 auto;
-  padding: 10%;
+  padding: 2%;
   width: 20em;
 }
 
@@ -481,7 +481,7 @@ a:active {text-decoration:underline;}
 	    </div>
 <a id="contact" class="smooth"></a>
     <div class="grid-container">
-<h2 class="icon">Contact me and see my other works through codepen!</h2>
+<h2 >Contact me and see my other works through codepen!</h2>
     <div class="wrap">
       <div class="github icon2"><a href="https://github.com/WVCS/portfolio-gracelee2" target="_blank"></a></div>
   <div class="codepen icon2"><a href="https://codepen.io/raz2/" target="_blank"></a></div>
