--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ a:active {text-decoration:underline;}
     <div class="grid-container">
 <h2 >Contact me and see my other works through codepen!</h2>
     <div class="wrap">
-      <div class="github icon2"><a href="https://github.com/WVCS/portfolio-gracelee2" target="_blank"></a></div>
+      <div class="github icon2"><a href="https://github.com/gracelee2" target="_blank"></a></div>
   <div class="codepen icon2"><a href="https://codepen.io/raz2/" target="_blank"></a></div>
 	     <div class="plus icon2"><a href="https://aboutme.google.com/u/0/?referer=gplus" target="_blank"></a></div>
 	  
